# ansible_training

./: .gitignore  README.md  ansible-navigator.yaml  init.sh  pyproject.toml  test.yml
ansible_practice/: test.yml_bak
ansible_practice/00_markdown/: 1_ansible-navigator.md  2_vyos.md  3_vyos_module.md  4-2_copy_file_module.md  4_debug.md  5_variable.md  6_condition.md  7_loop.md  8_general-practice.md  98_ansible_basic.md
ansible_practice/03_vyos/: tas_sato_vyos.yml  vyos_module_exam_1.yml  vyos_module_exam_2.yml  vyos_module_exam_3.yml  vyos_module_sample.yml
ansible_practice/03_vyos/answer/: vyos_module_exam_1.yml  vyos_module_exam_2.yml  vyos_module_exam_3.yml  vyos_module_exam_4.yml
ansible_practice/04-2_copy_file/: copy_module_sample.yml  file_module_sample.yml  vyos_module_exam_2.yml  vyos_module_exam_3.yml
ansible_practice/04_debug/: debug_module_exam_1.yml  debug_module_sample.yml
ansible_practice/05_variable/: variable_exam_3.yml
ansible_practice/06_condition/: when_exam_1.yml  when_exam_3.yml  when_exam_4.yml
ansible_practice/07_loop/: loop_exam_2.yml  loop_exam_3.yml  loop_exam_4.yml  loop_sample_1.yml
ansible_practice/08_general-practice/: change_routing.yml  main.yml  make_directory.yml  output_show_commands.yml  rollback_routing.yml  success_and_failed_message.yml
ansible_practice/09_test/: template_test.md  test_template.yml
execution_environment/: execution-environment.yml
init_settings/: docker-compose.yml
init_settings/00_markdown/: VyOS_on_AWS.md  repository_update.md
init_settings/ubuntu/: Dockerfile
(+9 files in other folders)
