[tool.poetry]
name = "ansible-on-vyos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansible-navigator = "^3.4"
docker-compose = "^1.29.2"
pyyaml = "5.1"
ansible-builder = "3.0.0"
docker = "6.1.3"
docutils = "0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
